# MediSync

./: .gitignore  pyproject.toml
docs/: calculations.xlsx
